-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 4.5 Required
-
Component/s: Replication
-
None
-
Fully Compatible
-
ALL
-
v4.4
-
Repl 2020-05-04, Repl 2020-05-18
-
0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
It seems like the linked BF happens because of a race condition. We shut down the mocked remote server and then start up the oplog fetcher. After we start up the oplog fetcher, we assert that it is active. This seems to be the line that is flaky, since it seems possible for the node to try to connect, and fail, before the assertion.