SERVER-47759: Hang before _connect() in oplog_fetcher_test.cpp

(cherry picked from commit 0f45c01312438ff8bd424033512a85af1b59b3bd)